<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:id="@+id/mainToolbar"
        android:padding="9dp"
        android:background="@android:color/black"
        android:src="@drawable/logo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:theme="@style/MyTextStyle">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvPackInfo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDateInfo"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_your_info"
                android:padding="16dp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:textSize="20sp"
                android:theme="@style/MyTextStyle"
                android:paddingBottom="30dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:theme="@style/MyTextStyle">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textColorHighlight="@android:color/white"
                    android:paddingTop="20dp"
                    android:inputType="textPersonName"
                    android:id="@+id/etFullName"
                    android:hint="@string/full_name"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textColorHighlight="@android:color/white"
                    android:paddingTop="16dp"
                    android:focusable="false"
                    android:clickable="true"
                    android:id="@+id/etDateTime"
                    android:hint="@string/date_time"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHighlight="@android:color/white"
                    android:textColor="@android:color/white"
                    android:paddingTop="16dp"
                    android:inputType="textEmailAddress"
                    android:id="@+id/etEmail"
                    android:hint="@string/e_mail"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHighlight="@android:color/white"
                    android:textColor="@android:color/white"
                    android:paddingTop="16dp"
                    android:inputType="phone"
                    android:id="@+id/etPhone"
                    android:hint="@string/phone"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHighlight="@android:color/white"
                    android:textColor="@android:color/white"
                    android:paddingTop="16dp"
                    android:inputType="text"
                    android:id="@+id/etAddress"
                    android:hint="@string/address"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHighlight="@android:color/white"
                    android:textColor="@android:color/white"
                    android:paddingTop="16dp"
                    android:inputType="text"
                    android:id="@+id/etApartment"
                    android:hint="@string/apartment"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHighlight="@android:color/white"
                    android:textColor="@android:color/white"
                    android:paddingTop="16dp"
                    android:inputType="text"
                    android:id="@+id/etCity"
                    android:hint="@string/city"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHighlight="@android:color/white"
                    android:textColor="@android:color/white"
                    android:paddingTop="16dp"
                    android:inputType="text"
                    android:id="@+id/etMessage"
                    android:hint="@string/leave_message"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="horizontal">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:background="@drawable/btn_bg"
                    android:layout_marginRight="2dp"
                    android:layout_marginEnd="2dp"
                    android:id="@+id/btnBack"
                    android:textColor="@android:color/white"
                    android:text="@string/back"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:text="@string/confirm"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    android:background="@color/orangeAccent"
                    android:textColor="@android:color/white"
                    android:id="@+id/btnConfirm"
                    style="?android:attr/buttonBarButtonStyle"/>
            </LinearLayout>
        </LinearLayout>



    </ScrollView>

    </LinearLayout>

